--- a/mods/redres/sequences/vehicles.yaml
+++ b/mods/redres/sequences/vehicles.yaml
@@ -2,6 +2,12 @@
 amcv:
 	icon: mcvicon
 
+cmin:
+	harvest: oregath
+		Length: 15
+		Facings: 8
+	icon: cminicon
+
 robo:
 	muzzle: gunfire
 		Length: *
@@ -74,11 +80,8 @@ arty:
 mgtk:
 	icon: rtnkicon
 
-cmin:
-	harvest: oregath
-		Length: 15
-		Facings: 8
-	icon: cminicon
+bfrt:
+	icon: bfrticon
 
 ctnk:
 	icon: ctnkicon
